--- a/front-end/ventas.html
+++ b/front-end/ventas.html
@@ -36,6 +36,9 @@
     <div class="container mt-5">
         <h1>Gestión de Ventas</h1>
 
+        <!-- Botón para abrir el modal de agregar venta -->
+        <button class="btn btn-primary mb-3" data-toggle="modal" data-target="#ventaModal">Agregar Nueva Venta</button>
+
         <!-- Tabla para Mostrar Ventas -->
         <table class="table table-striped mt-4">
             <thead>
@@ -51,29 +54,43 @@
                 <!-- Las filas se llenarán dinámicamente con JavaScript -->
             </tbody>
         </table>
+    </div>
 
-        <!-- Formulario para Agregar/Actualizar Ventas -->
-        <div class="mt-4">
-            <h3 id="formTitle">Agregar Nueva Venta</h3>
-            <form id="ventaForm">
-                <div class="form-group">
-                    <label for="ventaPrendaId">Prenda ID</label>
-                    <input type="number" class="form-control" id="ventaPrendaId" required>
-                </div>
-                <div class="form-group">
-                    <label for="ventaCantidad">Cantidad</label>
-                    <input type="number" class="form-control" id="ventaCantidad" required>
-                </div>
-                <div class="form-group">
-                    <label for="ventaFecha">Fecha</label>
-                    <input type="date" class="form-control" id="ventaFecha" required>
-                </div>
-                <input type="hidden" id="ventaId">
-                <button type="submit" class="btn btn-primary">Guardar</button>
-                <button type="button" class="btn btn-secondary" id="cancelButton" style="display: none;">Cancelar</button>
-            </form>
+    <!-- Modal para agregar/editar venta -->
+<div class="modal fade" id="ventaModal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalTitle">Agregar Nueva Venta</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="ventaForm">
+                    <div class="form-group">
+                        <label for="ventaPrendaId">Prenda</label>
+                        <select class="form-control" id="ventaPrendaId" required>
+                            <!-- Las opciones se llenarán dinámicamente con JavaScript -->
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="ventaCantidad">Cantidad</label>
+                        <input type="number" class="form-control" id="ventaCantidad" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="ventaFecha">Fecha</label>
+                        <input type="date" class="form-control" id="ventaFecha" required>
+                    </div>
+                    <input type="hidden" id="ventaId">
+                    <button type="submit" class="btn btn-primary">Guardar</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                </form>
+            </div>
         </div>
     </div>
+</div>
+
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
